<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_string">Enter String</string>
    <string name="enter_search_term">Enter search term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_image_settings">ImageSettingsActivity</string>
    <string name="etImageQuery">Enter Image Query</string>
    <string name="btnImageSearch">Search</string>
    <string name="title_activity_full_image">FullImage</string>
    <string name="miSettingsMenu">Settings</string>
    <string name="advancedSearchOptionsTitle">Advanced Search Options</string>
    <string name="imageSizeTitle">Image Size</string>
    <string name="colorFilterTitle">Color Filter</string>
    <string name="imageTypeTitle">Image Type</string>
    <string name="siteFilterTitle">Site Filter</string>
    <string name="siteFilterHint">Enter Site</string>
    <string name="btnSave">Save</string>
 
    <string-array name="spinnerImageSizes">
        <item>""</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    <string-array name="spinnerColorFilter">
        <item>""</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>  
    </string-array>
    <string-array name="spinnerImageType">
        <item>""</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
      </string-array>
</resources>




